improved implementor 2